--- a/ui/src/main/resources/fxml/Application.fxml
+++ b/ui/src/main/resources/fxml/Application.fxml
@@ -11,16 +11,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.cell.*?>
+<?import javafx.scene.control.Button?>
+<?import net.d80harri.wr.ui.TreeTableViewWithItems?>
 
 <fx:root type="javafx.scene.layout.BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" >
   <center>
     <SplitPane dividerPositions="0.5" focusTraversable="true" prefHeight="160.0" prefWidth="200.0">
       <items>
-        <TreeTableView fx:id="tree" prefHeight="574.0" prefWidth="100.0" >
+        <TreeTableViewWithItems  fx:id="tree" prefHeight="574.0" prefWidth="100.0" >
         	<columns>
         		<TreeTableColumn fx:id="titleColumn" text="Title" minWidth="300"/>
         	</columns>
-        </TreeTableView>
+        </TreeTableViewWithItems>
         <VBox prefHeight="200.0" prefWidth="194.0">
           <children>
           	<TaskView fx:id="taskView" layoutX="5.0" layoutY="4.0">
@@ -50,4 +52,7 @@
       </menus>
     </MenuBar>
   </top>
+  <bottom>
+  	<Button fx:id="button" text="Debug"/>
+  </bottom>
 </fx:root>
