a first running example

--- a/ui/src/main/resources/fxml/Application.fxml
+++ b/ui/src/main/resources/fxml/Application.fxml
@@ -18,7 +18,7 @@
   <center>
     <SplitPane dividerPositions="0.5" focusTraversable="true" prefHeight="160.0" prefWidth="200.0">
       <items>
-        <TreeTableViewWithItems  fx:id="tree" prefHeight="574.0" prefWidth="100.0" >
+        <TreeTableViewWithItems  fx:id="tree" prefHeight="574.0" prefWidth="100.0" showRoot="false" >
         	<columns>
         		<TreeTableColumn fx:id="titleColumn" text="Title" minWidth="300"/>
         	</columns>
