--- a/wr/ui/src/main/resources/fxml/Application.fxml
+++ b/wr/ui/src/main/resources/fxml/Application.fxml
@@ -12,14 +12,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.control.Button?>
-<?import net.d80harri.wr.ui.TreeTableViewWithItems?>
 <?import javafx.scene.control.TreeTableView?>
 
 <fx:root type="javafx.scene.layout.BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" >
   <center>
     <SplitPane dividerPositions="0.5" focusTraversable="true" prefHeight="160.0" prefWidth="200.0">
       <items>
-        <TreeTableView  fx:id="tree" prefHeight="574.0" prefWidth="100.0" showRoot="true" >
+        <TreeTableView  fx:id="tree" prefHeight="574.0" prefWidth="100.0" showRoot="false" >
         	<columns>
         		<TreeTableColumn fx:id="titleColumn" text="Title" minWidth="300"/>
         	</columns>
