--- a/wr/ui/src/main/resources/fxml/Application.fxml
+++ b/wr/ui/src/main/resources/fxml/Application.fxml
@@ -18,9 +18,10 @@
   <center>
     <SplitPane dividerPositions="0.5" focusTraversable="true" prefHeight="160.0" prefWidth="200.0">
       <items>
-        <TreeTableView  fx:id="tree" prefHeight="574.0" prefWidth="100.0" showRoot="false" >
+        <TreeTableView  fx:id="tree" prefHeight="574.0" prefWidth="100.0" showRoot="false" editable="true">
         	<columns>
-        		<TreeTableColumn fx:id="titleColumn" text="Title" minWidth="300"/>
+        		<TreeTableColumn fx:id="titleColumn" text="Title" minWidth="300">
+        		</TreeTableColumn>
         	</columns>
         </TreeTableView>
         <VBox prefHeight="200.0" prefWidth="194.0">
