--- a/wr/ui/src/main/java/net/d80harri/wr/ui/application/application.fxml
+++ b/wr/ui/src/main/java/net/d80harri/wr/ui/application/application.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import net.d80harri.wr.ui.*?>
+<?import net.d80harri.wr.ui.takstree.TaskTreeView?>
 <?import javafx.collections.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -13,23 +13,23 @@
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TreeTableView?>
+<?import javafx.scene.layout.BorderPane ?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<fx:root type="javafx.scene.layout.BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" >
+
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.d80harri.wr.ui.application.ApplicationPresenter">
   <center>
     <SplitPane dividerPositions="0.5" focusTraversable="true" prefHeight="160.0" prefWidth="200.0">
       <items>
-        <TreeTableView  fx:id="tree" prefHeight="574.0" prefWidth="100.0" showRoot="false" editable="true">
-        	<columns>
-        		<TreeTableColumn fx:id="titleColumn" text="Title" minWidth="300" >
-        		</TreeTableColumn>
-        	</columns>
-        </TreeTableView>
-        <VBox prefHeight="200.0" prefWidth="194.0">
+      	<AnchorPane fx:id="taskTree"/>
+        <!-- <VBox prefHeight="200.0" prefWidth="194.0">
           <children>
           	<TaskView fx:id="taskView" layoutX="5.0" layoutY="4.0">
           	</TaskView>
           </children>
         </VBox>
+         -->
       </items>
     </SplitPane>
   </center>
@@ -59,6 +59,6 @@
     </MenuBar>
   </top>
   <bottom>
-  	<Button fx:id="button" text="Debug"/>
+  	<Button text="Debug" onAction="#debug"/>
   </bottom>
-</fx:root>
+</BorderPane>
