--- a/wr/ui/src/main/java/net/d80harri/wr/ui/takstree/TaskTree.fxml
+++ b/wr/ui/src/main/java/net/d80harri/wr/ui/takstree/TaskTree.fxml
@@ -22,9 +22,9 @@
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.d80harri.wr.ui.takstree.TaskTreePresenter">
 	<center>
 		<VBox >
-			<TreeTableView fx:id="tree" onKeyPressed="#onKeyPressedInTable" showRoot="false">
+			<TreeTableView fx:id="tree" onKeyPressed="#onKeyPressedInTable" showRoot="false" editable="true">
 				<columns>
-					<TreeTableColumn fx:id="titleColumn" text="Title" minWidth="500" />
+					<TreeTableColumn fx:id="titleColumn" text="Title" minWidth="500" editable="true"/>
 					<TreeTableColumn fx:id="debugColumn" text="Debug" />
 				</columns>
 			</TreeTableView>
